Changed layout of projects. Styled the images in the list.

--- a/ReactProjects/PersonalWebsite/react-portfolio/src/components/Projects/index.scss
+++ b/ReactProjects/PersonalWebsite/react-portfolio/src/components/Projects/index.scss
@@ -1,14 +1,13 @@
 .project-area {
-    width: 100%;
-    min-width: fit-content;
-    margin-top: 20px;
-    height: 100%;
+  width: 100%;
+  min-width: fit-content;
+  height: 100%;
 }
 
-.MuiImageListItem-root {
-    max-height: 10%;
+.project-page > .text-zone {
+  width: 100%;
 }
 
 a {
-    height: fit-content;
+  height: fit-content;
 }
