Tidying up repo.

--- a/ReactProjects/Iluztro-v2/Iluztro-v2/frontend/src/index.css
+++ b/ReactProjects/Iluztro-v2/Iluztro-v2/frontend/src/index.css
@@ -148,7 +148,7 @@ textarea,
 select,
 label {
   font-size: inherit;
-  font-family: inherit;
+  font-family: var(--ff-serif);
   color: inherit;
 }
 
@@ -178,7 +178,23 @@ textarea:focus {
 .container {
   padding: 2em 2em;
   margin-inline: auto;
-  max-width: 80rem;
+  max-width: min(80rem, 100%);
+}
+
+.blurred-background {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+
+  background: rgba(0, 0, 0, 0.5);
+  filter: blur(0.5);
+  z-index: 100;
+}
+
+.toggled {
+  transform: rotateX(180deg);
 }
 
 .sr-only {
