--- a/ReactProjects/Iluztro-v2/Iluztro-v2/frontend/src/pages/pages.css
+++ b/ReactProjects/Iluztro-v2/Iluztro-v2/frontend/src/pages/pages.css
@@ -243,7 +243,7 @@
 }
 
 .section-article {
-  font-size: var(--ff-medium);
+  font-size: var(--fs-medium);
   font-family: var(--ff-sans-normal);
 }
 
@@ -559,6 +559,234 @@ li::marker {
   gap: 2rem;
 }
 
+.admin--menubar {
+  display: flex;
+  justify-content: space-between;
+}
+
+.admin--menubar h1 {
+  font-size: var(--fs-700);
+  font-weight: 700;
+}
+
+.menubar--container {
+  position: relative;
+}
+
+.create-job {
+  display: flex;
+  position: absolute;
+  flex-direction: column;
+  gap: 1rem;
+  min-width: 300px;
+  padding: 2rem;
+  left: 0;
+  top: 50%;
+
+  background-color: white;
+  border-radius: 5px;
+  transform: translateX(calc(-100% - 1rem)) translateY(-50%);
+  z-index: 200;
+}
+
+.create-job h2 {
+  font-size: var(--fs-header-s);
+}
+
+.create__toolbar {
+  display: flex;
+  gap: 2rem;
+  align-items: center;
+}
+
+.create-job select {
+  height: 50px;
+  flex-grow: 0;
+  padding: 0.5rem;
+
+  font-size: var(--fs-large);
+  font-weight: 700;
+
+  color: var(--white);
+  background: var(--accent);
+  border: 0px;
+  border-radius: 5px;
+}
+
+.create__search {
+  position: relative;
+}
+
+.search__results {
+  content: "";
+  position: absolute;
+  width: 100%;
+  top: 100%;
+  left: 0;
+
+  background-color: var(--white);
+  border-radius: 5px;
+  box-shadow: 0px 2px 2px var(--dark);
+}
+
+.result {
+  padding: 0.5rem 0.25rem;
+
+  font-family: var(--ff-serif);
+  font-size: var(--fs-large);
+
+  transition: 300ms;
+}
+
+.result:hover {
+  background-color: var(--accent-2);
+}
+
+.create__bar {
+  display: flex;
+  gap: 1rem;
+  margin-bottom: 1rem;
+
+  font-size: var(--fs-large);
+}
+
+.create__button {
+  width: 20px;
+
+  transition: 300ms;
+  background: transparent;
+  border: 0;
+}
+
+.create__dropdown {
+  height: 0px;
+
+  overflow: hidden;
+  transition: height 500ms;
+}
+
+.extended {
+  height: 300px;
+  transition: height 500ms;
+}
+
+.create__form {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.create__form div,
+.create__job div {
+  display: flex;
+  flex-direction: column;
+}
+
+.menubar--button {
+  position: relative;
+  width: 50px;
+  height: auto;
+
+  background-color: var(--accent);
+  border: 0px;
+  border-radius: 5px;
+}
+
+.overflow-wrapper {
+  overflow: hidden;
+  border-radius: 5px;
+}
+
+.dashboard--admin__list {
+  border: 2px solid var(--dark);
+  border-radius: 5px;
+  border-spacing: 0.75rem;
+  overflow-x: scroll;
+}
+
+.dashboard--admin__list::-webkit-scrollbar {
+  width: 1rem;
+}
+
+.dashboard--admin__list::-webkit-scrollbar-track {
+  background-color: var(--accent);
+}
+
+.dashboard--admin__list::-webkit-scrollbar-thumb {
+  background-color: var(--white);
+  border-radius: 5px;
+  border: 1px solid var(--dark);
+}
+
+.dashboard--admin__list::-webkit-scrollbar-thumb:vertical {
+  display: none;
+}
+
+.admin--table {
+  width: max-content;
+  padding: 1rem;
+
+  font-family: var(--ff-serif);
+  font-size: var(--fs-medium);
+}
+
+.admin--table tr > th {
+  min-width: max-content;
+  font-size: var(--fs-small);
+  text-align: left;
+}
+
+.admin--table td {
+  min-width: max-content;
+  font-size: var(--fs-medium);
+}
+
+.select-wrapper {
+  position: relative;
+  display: inline-block;
+  background-color: var(--accent);
+  border-radius: 30px;
+}
+
+.select-wrapper::after {
+  content: "";
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  top: 50%;
+  right: 5px;
+
+  background-image: url("../assets/images/white-arrow.svg");
+  background-size: 30px;
+  transform: translateY(-50%);
+}
+
+.admin--table select {
+  position: relative;
+  padding: 0.5rem calc(0.5rem + 30px) 0.5rem 0.75rem;
+
+  font-weight: 700;
+
+  color: var(--white);
+  background: transparent;
+  border: 0px;
+  border-radius: 30px;
+  appearance: none;
+  z-index: 3;
+}
+
+.update-button {
+  width: 50px;
+  height: auto;
+
+  background: transparent;
+  border: none;
+}
+
+.swirl {
+  animation: swirl 1s linear infinite normal forwards;
+}
+
 @keyframes fadeIn-slideIn {
   0% {
     opacity: 0;
@@ -578,5 +806,32 @@ li::marker {
   100% {
     opacity: 1;
     transform: rotate(0deg) rotateY(0deg);
+  }
+}
+
+@keyframes swirl {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes extend {
+  0% {
+    height: 0px;
+  }
+  100% {
+    height: 300px;
+  }
+}
+
+@keyframes close {
+  0% {
+    height: 300px;
+  }
+  100% {
+    height: 0px;
   }
 }
