--- a/ReactProjects/PersonalWebsite/react-portfolio/src/components/About/index.scss
+++ b/ReactProjects/PersonalWebsite/react-portfolio/src/components/About/index.scss
@@ -1,22 +1,31 @@
-.stage-cube-cont {
-  width: 50%;
+.logo-zone {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
   height: 100%;
-  top: 0;
-  padding-top: 18%;
-  margin-left: 0;
-  position: absolute;
-  right: 0;
-  overflow: hidden;
+}
+
+.stage-cube-cont {
+  position: relative;
+  width: 200px;
+  height: 200px;
+
+  perspective: 600px;
 }
 
 .cubespinner {
-  animation-name: spincube;
+  position: relative;
+  width: 100%;
+  height: 100%;
+
+  /* animation-name: spincube; */
   animation-timing-function: ease-in-out;
   animation-iteration-count: infinite;
   animation-duration: 12s;
   transform-style: preserve-3d;
-  transform-origin: 100px 100px 0;
-  margin-left: calc(50% - 100px);
 
   div {
     position: absolute;
@@ -29,11 +38,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    box-shadow: 0 0 20px 0px lightyellow;
+    box-shadow: 0 0 10px 0px lightyellow;
   }
 
   .face1 {
-    transform: translateZ(100px);
+    transform: rotateY(0deg) translateZ(100px);
     color: #5ed4f4;
   }
 
@@ -43,17 +52,17 @@
   }
 
   .face3 {
-    transform: rotateY(90deg) rotateX(90deg) translateZ(100px);
+    transform: rotateY(180deg) translateZ(100px);
     color: #f06529;
   }
 
   .face4 {
-    transform: rotateY(180deg) rotateZ(90deg) translateZ(100px);
+    transform: rotateY(-90deg) translateZ(100px);
     color: #28a4d9;
   }
 
   .face5 {
-    transform: rotateY(-90deg) rotateZ(90deg) translateZ(100px);
+    transform: rotateX(90deg) translateZ(100px);
     color: #ffe873;
   }
 
