--- a/ReactProjects/PersonalWebsite/react-portfolio/src/components/Contact/index.scss
+++ b/ReactProjects/PersonalWebsite/react-portfolio/src/components/Contact/index.scss
@@ -1,110 +1,116 @@
 .contact-form {
+  width: 100%;
+  margin-top: 20px;
+
+  ul {
+    display: flex;
+    gap: 1rem;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 0;
+    margin: 0;
+
+    li {
+      width: 100%;
+      padding: 0;
+      margin: 0;
+      list-style: none;
+      margin-bottom: 10px;
+      overflow: hidden;
+      display: block;
+      position: relative;
+      opacity: 0;
+      animation: fadeInUp 2s 2s;
+      animation-fill-mode: forwards;
+    }
+
+    @media (min-width: 768px) {
+      li.half {
+        width: calc(50% - 1rem);
+      }
+    }
+  }
+
+  input[type='text'],
+  input[type='email'],
+  input[type='tel'] {
     width: 100%;
-    margin-top: 20px;
-
-    ul {
-        padding: 0;
-        margin: 0;
-
-        li {
-            padding: 0;
-            margin: 0;
-            list-style: none;
-            margin-bottom: 10px;
-            overflow: hidden;
-            display: block;
-            clear: both;
-            position: relative;
-            opacity: 0;
-            animation: fadeInUp 2s 2s;
-            animation-fill-mode: forwards;
-        }
-
-        li.half {
-            width: 49%;
-            margin-left: 2%;
-            float: left;
-            clear: none;
-
-            &:first-child {
-                margin-left: 0;
-            }
-        }
-    }
-
-    input[type='text'],
-    input[type='email'] {
-        width: 100%;
-        border: 0;
-        background: #115173;
-        height: 50px;
-        font-size: 16px;
-        color: #fff;
-        padding:  0 20px;
-        box-sizing: border-box;
-    }
-
-    textarea {
-        width: 100%;
-        border: 0;
-        background: #115173;
-        height: 50px;
-        font-size: 16px;
-        color: #fff;
-        padding: 20px;
-        min-height: 150px;
-        box-sizing: border-box;
-    }
-
-    .flat-button {
-        color: #9c0c02;
-        background: 0 0;
-        font: 11px;
-        letter-spacing: 3px;
-        text-decoration: none;
-        padding: 8px 10px;
-        border: 5px solid #9c0c02;
-        float: right;
-        border-radius: 4px;
-    }
-}
-
-.info-map {
-    position: absolute;
-    background-color: #000;
-    top: 50px;
-    right: 30%;
-    z-index: 999999;
-    width: 267px;
-    padding: 20px;
+    border: 0;
+    background: #115173;
+    height: 50px;
+    font-size: 16px;
     color: #fff;
-    font-family: 'Helvetica';
-    font-size: 17px;
-    font-weight: 300;
-    opacity: 0;
-    animation: fadeIn 1s 1.5s;
-    animation-fill-mode: forwards;
+    padding: 0 20px;
+    box-sizing: border-box;
+  }
 
-    span {
-        font-size: 16px;
-        display: block;
-        padding-top: 20px;
-        color: #9c0c02;
-    }
+  textarea {
+    width: 100%;
+    border: 0;
+    background: #115173;
+    height: 50px;
+    font-size: 16px;
+    color: #fff;
+    padding: 20px;
+    min-height: 150px;
+    box-sizing: border-box;
+  }
+
+  .flat-button {
+    color: #9c0c02;
+    background: 0 0;
+    font: 11px;
+    letter-spacing: 3px;
+    text-decoration: none;
+    padding: 8px 10px;
+    border: 5px solid #9c0c02;
+    float: right;
+    border-radius: 4px;
+  }
 }
 
 .map-wrap {
-    background: rgba(8, 253, 216, 0.1);
-    float: right;
-    width: 53%;
-    height: 100%;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  padding-inline: 1rem;
+
+  background: rgba(8, 253, 216, 0.1);
+}
+
+.info-map {
+  position: absolute;
+  background-color: #000;
+  top: 25px;
+  right: 25px;
+  z-index: 999999;
+  width: 267px;
+  padding: 20px;
+  color: #fff;
+  font-family: 'Helvetica';
+  font-size: 17px;
+  font-weight: 300;
+  opacity: 0;
+  animation: fadeIn 1s 1.5s;
+  animation-fill-mode: forwards;
+
+  span {
+    font-size: 16px;
+    display: block;
+    padding-top: 20px;
+    color: #9c0c02;
+  }
+}
+
+@media (min-width: 1024px) {
 }
 
 .leaflet-container {
-    width: 100%;
-    height: 100%;
-    position: relative;
-    opacity: 0;
-    animation: backInRight 1s 1.2s;
-    animation-fill-mode: forwards;
+  width: 100%;
+  height: 100%;
+  min-height: 450px;
+  position: relative;
+  opacity: 0;
+  animation: backInRight 1s 1.2s;
+  animation-fill-mode: forwards;
 }
