--- a/ReactProjects/PersonalWebsite/react-portfolio/src/components/Layout/index.scss
+++ b/ReactProjects/PersonalWebsite/react-portfolio/src/components/Layout/index.scss
@@ -1,7 +1,11 @@
 .page {
-  width: 100%;
-  height: 100%;
   position: absolute;
+  min-width: 340px;
+  width: 93%;
+  height: 100%;
+  left: 7%;
+
+  overflow-y: scroll;
 }
 
 .top-tags {
@@ -14,7 +18,7 @@
   opacity: 0.6;
   position: relative;
   bottom: 0;
-  left: 100px;
+  left: 3%;
   font-size: 18px;
   font-family: 'La Belle Aurore';
 }
@@ -24,34 +28,43 @@
 }
 
 .container {
-  overflow-y: scroll;
-  width: 100%;
-  will-change: contents;
-  height: 90%;
-  min-height: 566px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
   position: relative;
-  opacity: 0;
-  top: 5%;
+  width: 100%;
+  min-height: 90%;
   margin: 0 auto;
+  top: 5%;
+
+  overflow-y: scroll;
   z-index: 1;
   transform-style: preserve-3d;
+  opacity: 0;
+
   animation: fadeIn 1s forwards;
   animation-delay: 1s;
+  will-change: contents;
+}
+
+@media (min-width: 1024px) {
+  .container {
+    flex-direction: row;
+  }
+
+  .container > * {
+    flex: 1 1 50%;
+  }
 }
 
 .about-page,
 .contact-page,
 .project-page {
   .text-zone {
-    position: absolute;
-    left: 10%;
-    top: 50%;
-    transform: translateY(-50%);
-    width: 35%;
-    vertical-align: middle;
-    display: table-cell;
-    max-height: 90%;
-    max-width: 80%;
+    position: relative;
+    width: 100%;
+    padding-inline: 1rem;
   }
 
   h1 {
@@ -59,9 +72,8 @@
     font-family: 'Coolvetica';
     color: #9c0c02;
     font-weight: 400;
-    margin-top: 0;
+    margin-block: 2rem;
     position: relative;
-    margin-bottom: 40px;
 
     &:before {
       content: '<h1>';
@@ -69,7 +81,7 @@
       font-size: 18px;
       position: absolute;
       margin-top: -10px;
-      left: -10px;
+      left: 10px;
       opacity: 0.6;
       line-height: 18px;
     }
@@ -80,9 +92,8 @@
       font-size: 18px;
       line-height: 18px;
       position: absolute;
-      left: -30px;
-      bottom: -20px;
-      margin-left: 20px;
+      left: 10px;
+      bottom: -15px;
       opacity: 0.6;
     }
   }
