--- a/ReactProjects/PersonalWebsite/react-portfolio/src/components/About/index.scss
+++ b/ReactProjects/PersonalWebsite/react-portfolio/src/components/About/index.scss
@@ -21,7 +21,7 @@
   width: 100%;
   height: 100%;
 
-  /* animation-name: spincube; */
+  animation-name: spincube;
   animation-timing-function: ease-in-out;
   animation-iteration-count: infinite;
   animation-duration: 12s;
